added connect with calendar service
