# delivery/calendar.go
@@ -2,56 +2,11 @@ package delivery
 
 import (
 	"encoding/json"
-	"errors"
 	"log"
 	e "main/domain/errors"
 	"main/domain/model"
 	"net/http"
-
-	"github.com/microcosm-cc/bluemonday"
 )
-
-// SetOAUTH2Token godoc
-// @Summary Sets teacher's OAUTH2Token
-// @Description Sets teacher's OAUTH2Token
-// @ID SetOAUTH2Token
-// @Accept  json
-// @Produce  json
-// @Tags Calendar
-// @Success 200 {object} model.Response
-// @Failure 500 {object} model.Error "internal server error - Request is valid but operation failed at server side"
-// @Router /oauth [post]
-func (api *Handler) SetOAUTH2Token(w http.ResponseWriter, r *http.Request) {
-	err := api.usecase.SetOAUTH2Token()
-	if err != nil {
-		log.Println(e.StacktraceError(err))
-		returnErrorJSON(w, e.ErrServerError500)
-		return
-	}
-	json.NewEncoder(w).Encode(&model.Response{})
-}
-
-// SaveOAUTH2TokenToFile godoc
-// @Summary Saves teacher's OAUTH2Token
-// @Description Saves teacher's OAUTH2Token
-// @ID SaveOAUTH2TokenToFile
-// @Accept  json
-// @Produce  json
-// @Tags Calendar
-// @Param   code         query     string  true  "code"
-// @Success 200 {object} model.Response
-// @Failure 500 {object} model.Error "internal server error - Request is valid but operation failed at server side"
-// @Router /oauth/savetoken [get]
-func (api *Handler) SaveOAUTH2TokenToFile(w http.ResponseWriter, r *http.Request) {
-	code := r.URL.Query().Get("code")
-	err := api.usecase.SaveOAUTH2Token(code)
-	if err != nil {
-		log.Println(e.StacktraceError(err))
-		returnErrorJSON(w, e.ErrServerError500)
-		return
-	}
-	json.NewEncoder(w).Encode(&model.Response{})
-}
 
 // CreateCalendar godoc
 // @Summary Creates teacher's calendar
@@ -65,15 +20,16 @@ func (api *Handler) SaveOAUTH2TokenToFile(w http.ResponseWriter, r *http.Request
 // @Failure 500 {object} model.Error "internal server error - Request is valid but operation failed at server side"
 // @Router /calendar [post]
 func (api *Handler) CreateCalendar(w http.ResponseWriter, r *http.Request) {
-	teacherProfile := r.Context().Value(KeyUserdata{"userdata"}).(*model.TeacherDB)
-	createdResponse, err := api.usecase.CreateCalendar(teacherProfile.ID)
-	if err != nil {
-		log.Println("Error ", err)
-		returnErrorJSON(w, e.ErrServerError500)
-		return
-	}
+	// teacherProfile := r.Context().Value(KeyUserdata{"userdata"}).(*model.TeacherDB)
+	// createdResponse, err := api.usecase.CreateCalendar(teacherProfile.ID)
+	// if err != nil {
+	// 	log.Println("Error ", err)
+	// 	returnErrorJSON(w, e.ErrServerError500)
+	// 	return
+	// }
 
-	json.NewEncoder(w).Encode(createdResponse)
+	//json.NewEncoder(w).Encode(createdResponse)
+	json.NewEncoder(w).Encode(&model.Response{})
 }
 
 // GetCalendar godoc
@@ -88,15 +44,16 @@ func (api *Handler) CreateCalendar(w http.ResponseWriter, r *http.Request) {
 // @Failure 500 {object} model.Error "internal server error - Request is valid but operation failed at server side"
 // @Router /calendar [get]
 func (api *Handler) GetCalendar(w http.ResponseWriter, r *http.Request) {
-	teacherProfile := r.Context().Value(KeyUserdata{"userdata"}).(*model.TeacherDB)
-	createdResponse, err := api.usecase.GetCalendar(teacherProfile.ID)
-	if err != nil {
-		log.Println(e.StacktraceError(err))
-		returnErrorJSON(w, e.ErrServerError500)
-		return
-	}
+	// teacherProfile := r.Context().Value(KeyUserdata{"userdata"}).(*model.TeacherDB)
+	// createdResponse, err := api.usecase.GetCalendar(teacherProfile.ID)
+	// if err != nil {
+	// 	log.Println(e.StacktraceError(err))
+	// 	returnErrorJSON(w, e.ErrServerError500)
+	// 	return
+	// }
 
-	json.NewEncoder(w).Encode(createdResponse)
+	// json.NewEncoder(w).Encode(createdResponse)
+	json.NewEncoder(w).Encode(&model.Response{})
 }
 
 // CreateCalendarEvent godoc
@@ -112,23 +69,23 @@ func (api *Handler) GetCalendar(w http.ResponseWriter, r *http.Request) {
 // @Failure 500 {object} model.Error "internal server error - Request is valid but operation failed at server side"
 // @Router /calendar/addevent [post]
 func (api *Handler) CreateCalendarEvent(w http.ResponseWriter, r *http.Request) {
-	teacherProfile := r.Context().Value(KeyUserdata{"userdata"}).(*model.TeacherDB)
-	decoder := json.NewDecoder(r.Body)
-	var req model.CalendarEvent
-	if err := decoder.Decode(&req); err != nil {
-		log.Println(e.StacktraceError(err))
-		returnErrorJSON(w, e.ErrBadRequest400)
-		return
-	}
-	sanitizer := bluemonday.UGCPolicy()
-	req.Title = sanitizer.Sanitize(req.Title)
-	req.Description = sanitizer.Sanitize(req.Description)
-	err := api.usecase.CreateCalendarEvent(&req, teacherProfile.ID)
-	if err != nil {
-		log.Println(e.StacktraceError(err))
-		returnErrorJSON(w, e.ErrServerError500)
-		return
-	}
+	// teacherProfile := r.Context().Value(KeyUserdata{"userdata"}).(*model.TeacherDB)
+	// decoder := json.NewDecoder(r.Body)
+	// var req model.CalendarEvent
+	// if err := decoder.Decode(&req); err != nil {
+	// 	log.Println(e.StacktraceError(err))
+	// 	returnErrorJSON(w, e.ErrBadRequest400)
+	// 	return
+	// }
+	// sanitizer := bluemonday.UGCPolicy()
+	// req.Title = sanitizer.Sanitize(req.Title)
+	// req.Description = sanitizer.Sanitize(req.Description)
+	// err := api.usecase.CreateCalendarEvent(&req, teacherProfile.ID)
+	// if err != nil {
+	// 	log.Println(e.StacktraceError(err))
+	// 	returnErrorJSON(w, e.ErrServerError500)
+	// 	return
+	// }
 
 	json.NewEncoder(w).Encode(&model.Response{})
 }
@@ -153,7 +110,7 @@ func (api *Handler) GetCalendarEvents(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	json.NewEncoder(w).Encode(&model.CalendarEvents{Events: events})
+	json.NewEncoder(w).Encode(events)
 }
 
 // DeleteCalendarEvent godoc
@@ -169,21 +126,21 @@ func (api *Handler) GetCalendarEvents(w http.ResponseWriter, r *http.Request) {
 // @Failure 500 {object} model.Error "internal server error - Request is valid but operation failed at server side"
 // @Router /calendar/event [delete]
 func (api *Handler) DeleteCalendarEvent(w http.ResponseWriter, r *http.Request) {
-	teacherProfile := r.Context().Value(KeyUserdata{"userdata"}).(*model.TeacherDB)
-	decoder := json.NewDecoder(r.Body)
-	var req model.DeleteEvent
-	if err := decoder.Decode(&req); err != nil {
-		log.Println(e.StacktraceError(err))
-		returnErrorJSON(w, e.ErrBadRequest400)
-		return
-	}
+	// teacherProfile := r.Context().Value(KeyUserdata{"userdata"}).(*model.TeacherDB)
+	// decoder := json.NewDecoder(r.Body)
+	// var req model.DeleteEvent
+	// if err := decoder.Decode(&req); err != nil {
+	// 	log.Println(e.StacktraceError(err))
+	// 	returnErrorJSON(w, e.ErrBadRequest400)
+	// 	return
+	// }
 
-	err := api.usecase.DeleteCalendarEvent(teacherProfile.ID, req.ID)
-	if err != nil {
-		log.Println(e.StacktraceError(err))
-		returnErrorJSON(w, e.ErrServerError500)
-		return
-	}
+	// err := api.usecase.DeleteCalendarEvent(teacherProfile.ID, req.ID)
+	// if err != nil {
+	// 	log.Println(e.StacktraceError(err))
+	// 	returnErrorJSON(w, e.ErrServerError500)
+	// 	return
+	// }
 
 	json.NewEncoder(w).Encode(&model.Response{})
 }
@@ -201,29 +158,29 @@ func (api *Handler) DeleteCalendarEvent(w http.ResponseWriter, r *http.Request) 
 // @Failure 500 {object} model.Error "internal server error - Request is valid but operation failed at server side"
 // @Router /calendar/event [post]
 func (api *Handler) UpdateCalendarEvent(w http.ResponseWriter, r *http.Request) {
-	teacherProfile := r.Context().Value(KeyUserdata{"userdata"}).(*model.TeacherDB)
-	decoder := json.NewDecoder(r.Body)
-	var req model.CalendarEvent
-	if err := decoder.Decode(&req); err != nil {
-		log.Println(e.StacktraceError(err))
-		returnErrorJSON(w, e.ErrBadRequest400)
-		return
-	}
-	if req.ID == "" {
-		log.Println(e.StacktraceError(errors.New("empty ID")))
-		returnErrorJSON(w, e.ErrBadRequest400)
-		return
-	}
+	// teacherProfile := r.Context().Value(KeyUserdata{"userdata"}).(*model.TeacherDB)
+	// decoder := json.NewDecoder(r.Body)
+	// var req model.CalendarEvent
+	// if err := decoder.Decode(&req); err != nil {
+	// 	log.Println(e.StacktraceError(err))
+	// 	returnErrorJSON(w, e.ErrBadRequest400)
+	// 	return
+	// }
+	// if req.ID == "" {
+	// 	log.Println(e.StacktraceError(errors.New("empty ID")))
+	// 	returnErrorJSON(w, e.ErrBadRequest400)
+	// 	return
+	// }
 
-	sanitizer := bluemonday.UGCPolicy()
-	req.Title = sanitizer.Sanitize(req.Title)
-	req.Description = sanitizer.Sanitize(req.Description)
-	err := api.usecase.UpdateCalendarEvent(&req, teacherProfile.ID)
-	if err != nil {
-		log.Println(e.StacktraceError(err))
-		returnErrorJSON(w, e.ErrServerError500)
-		return
-	}
+	// sanitizer := bluemonday.UGCPolicy()
+	// req.Title = sanitizer.Sanitize(req.Title)
+	// req.Description = sanitizer.Sanitize(req.Description)
+	// err := api.usecase.UpdateCalendarEvent(&req, teacherProfile.ID)
+	// if err != nil {
+	// 	log.Println(e.StacktraceError(err))
+	// 	returnErrorJSON(w, e.ErrServerError500)
+	// 	return
+	// }
 
 	json.NewEncoder(w).Encode(&model.Response{})
 }
