# docs/swagger.json
@@ -1200,75 +1200,6 @@
                 }
             }
         },
-        "/oauth": {
-            "post": {
-                "description": "Sets teacher's OAUTH2Token",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Calendar"
-                ],
-                "summary": "Sets teacher's OAUTH2Token",
-                "operationId": "SetOAUTH2Token",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/model.Response"
-                        }
-                    },
-                    "500": {
-                        "description": "internal server error - Request is valid but operation failed at server side",
-                        "schema": {
-                            "$ref": "#/definitions/model.Error"
-                        }
-                    }
-                }
-            }
-        },
-        "/oauth/savetoken": {
-            "get": {
-                "description": "Saves teacher's OAUTH2Token",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Calendar"
-                ],
-                "summary": "Saves teacher's OAUTH2Token",
-                "operationId": "SaveOAUTH2TokenToFile",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "code",
-                        "name": "code",
-                        "in": "query",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/model.Response"
-                        }
-                    },
-                    "500": {
-                        "description": "internal server error - Request is valid but operation failed at server side",
-                        "schema": {
-                            "$ref": "#/definitions/model.Error"
-                        }
-                    }
-                }
-            }
-        },
         "/profile": {
             "get": {
                 "description": "gets teacher's info",
@@ -1305,7 +1236,7 @@
                 }
             }
         },
-        "/register": {
+        "/signup": {
             "post": {
                 "description": "Sign Up user",
                 "consumes": [
@@ -1357,53 +1288,6 @@
                     },
                     "503": {
                         "description": "service unavailable",
-                        "schema": {
-                            "$ref": "#/definitions/model.Error"
-                        }
-                    }
-                }
-            }
-        },
-        "/register2": {
-            "post": {
-                "description": "Create teacher",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Teacher"
-                ],
-                "summary": "Create teacher",
-                "operationId": "createTeacher",
-                "parameters": [
-                    {
-                        "description": "Teacher params",
-                        "name": "user",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/model.TeacherSignUp"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/model.Response"
-                        }
-                    },
-                    "401": {
-                        "description": "unauthorized - Access token is missing or invalid",
-                        "schema": {
-                            "$ref": "#/definitions/model.Error"
-                        }
-                    },
-                    "500": {
-                        "description": "internal server error - Request is valid but operation failed at server side",
                         "schema": {
                             "$ref": "#/definitions/model.Error"
                         }
@@ -1778,6 +1662,9 @@
                     "type": "boolean"
                 },
                 "socialType": {
+                    "type": "string"
+                },
+                "studentAvatar": {
                     "type": "string"
                 },
                 "studentID": {
@@ -2193,6 +2080,9 @@
         "model.StudentByID": {
             "type": "object",
             "properties": {
+                "avatar": {
+                    "type": "string"
+                },
                 "name": {
                     "type": "string"
                 },
@@ -2212,6 +2102,9 @@
         "model.StudentFromClass": {
             "type": "object",
             "properties": {
+                "avatar": {
+                    "type": "string"
+                },
                 "chatID": {
                     "type": "integer"
                 },
@@ -2240,8 +2133,11 @@
         "model.Task": {
             "type": "object",
             "properties": {
-                "attach": {
-                    "type": "string"
+                "attaches": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
                 },
                 "description": {
                     "type": "string"
@@ -2254,8 +2150,11 @@
         "model.TaskByID": {
             "type": "object",
             "properties": {
-                "attach": {
-                    "type": "string"
+                "attaches": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
                 },
                 "description": {
                     "type": "string"
@@ -2273,8 +2172,11 @@
         "model.TaskCreate": {
             "type": "object",
             "properties": {
-                "attach": {
-                    "type": "string"
+                "attaches": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
                 },
                 "description": {
                     "type": "string"
